--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+fastapi = "^0.115.12"
+uvicorn = "^0.34.2"
+celery = "^5.5.1"
+redis = "^5.2.1"
 
 
 [build-system]
